[build-system]
# Minimum requirements for the build system to execute.
requires = [
    # 68.1.0 Promote pyproject.toml's [tool.setuptools] out of beta.
    # 68.1.1 Fix editable install finder handling of nested packages
    'setuptools >= 68.1.1',
    # version constraint for macOS Big Sur support (see https://github.com/sagemath/sage/issues/31050)
    'wheel >=0.36.2',
    'cypari2 >=2.1.1',
    'cysignals >=1.10.2',
    # per https://github.com/scipy/scipy/blob/maintenance/1.13.x/pyproject.toml
    'cython >=3.0.8,<3.1.0",
    'gmpy2 ~=2.1.b999',
    'memory_allocator',
    # per https://github.com/scipy/scipy/blob/maintenance/1.13.x/pyproject.toml
    'numpy >=1.22.4',
    'pkgconfig',
]
build-backend = "setuptools.build_meta"

[tool.conda-lock]
platforms = [
    'osx-64', 'linux-64', 'linux-aarch64', 'osx-arm64'
]
