[build-system]
# Minimum requirements for the build system to execute.
requires = [
    # 68.1.0 Promote pyproject.toml's [tool.setuptools] out of beta.
    # 68.1.1 Fix editable install finder handling of nested packages
    'setuptools >= 68.1.1',
    # version constraint for macOS Big Sur support (see https://github.com/sagemath/sage/issues/31050)
    'wheel >=0.36.2',
    'cypari2 >=2.1.1',
    'cysignals >=1.11.4',
    # Exclude 3.0.3 because of https://github.com/cython/cython/issues/5748
    'cython >=3.0, != 3.0.3, <4.0',
    'gmpy2 ~=2.1.b999',
    'memory_allocator',
    'numpy >=1.19',
    'pkgconfig',
    'jinja2',
]
build-backend = "setuptools.build_meta"

[project]
name = "sagemath-standard"
description = "Sage: Open Source Mathematics Software: Standard Python Library"
dependencies = [
    'six >=1.15.0',
    # From build/pkgs/sagelib/dependencies
    'conway-polynomials >=0.8',
    'cypari2 >=2.1.1',
    'cysignals >=1.10.2',
    'cython >=3.0, != 3.0.3, <4.0',
    'gmpy2 ~=2.1.b999',
    # According to https://pypi.org/project/importlib-metadata/,
    # 4.13 provides the features of Python 3.11 importlib.metadata
    'importlib_metadata >=4.13; python_version<"3.11"',
    # According to https://pypi.org/project/importlib-resources/,
    # version 5.7 provides the features of Python 3.11 importlib.resources
    'importlib_resources >= 5.7; python_version<"3.11"',
    'lrcalc ~=2.1',
    'memory_allocator',
    'numpy >=1.19',
    'pkgconfig',
    # Issue #30922: pplpy 0.8.4 and earlier do not declare dependencies correctly
    'pplpy >=0.8.6',
    'primecountpy',
    'requests >=2.13.0',
    # According to https://github.com/python/typing_extensions/blob/main/CHANGELOG.md,
    # version 4.4.0 adds another Python 3.11 typing backport
    'typing_extensions >= 4.4.0; python_version<"3.11"',
    # From Makefile.in: SAGERUNTIME
    'ipython >=7.13.0',
    'pexpect >=4.8.0',
    # From Makefile.in: DOC_DEPENDENCIES
    'sphinx >=7.4.7, <9',
    'networkx >=2.4',
    # 1.8 is known good version.
    # Per https://docs.scipy.org/doc/scipy/dev/core-dev/index.html#version-numbering
    # and https://docs.scipy.org/doc/scipy/dev/core-dev/index.html#deprecations,
    # deprecations cannot be introduced in micro releases.
    # SciPy devs wait "at least 6 months", "in practice two (minor) releases"
    # from deprecation to removal of a feature.
    'scipy >=1.5',
    'sympy >=1.6, <2.0',
    # Issue #33642: Set lower bound for use of matplotlib color maps introduced in #33491,
    # and to suppress deprecation warnings (https://github.com/matplotlib/matplotlib/pull/21073)
    'matplotlib >=3.5.1',
    'pillow >=7.2.0',
    'mpmath >=1.1.0',
    'ipykernel >=5.2.1',
    'jupyter-client',
    'ipywidgets >=7.5.1',
    'fpylll >=0.5.9',
    'ptyprocess > 0.5',
]
dynamic = ["version"]
# duplicated from m4/pyproject_toml_metadata.m4
license = {text = "GNU General Public License (GPL) v2 or later"}
authors = [{name = "The Sage Developers", email = "sage-support@googlegroups.com"}]
classifiers = [
    "Development Status :: 6 - Mature",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Mathematics",
]
urls = {Homepage = "https://www.sagemath.org"}
requires-python = ">=3.9, <3.13"

[project.optional-dependencies]
R = [
    'rpy2 >=3.3',
]
bliss = [
    'sagemath-bliss',
]
coxeter3 = [
    'sagemath-coxeter3',
]
mcqd = [
    'sagemath-mcqd',
]
meataxe = [
    'sagemath-meataxe',
]
sirocco = [
    'sagemath-sirocco',
]
tdlib    = [
    'sagemath-tdlib',
]

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[tool.conda-lock]
platforms = [
    'osx-64', 'linux-64', 'linux-aarch64', 'osx-arm64'
]

[tool.setuptools]
script-files = [
    # The sage script
    "bin/sage",
    # Other scripts that should be in the path also for OS packaging of sage:
    "bin/sage-eval",
    # Included because it is useful for doctesting/coverage testing user scripts too:
    "bin/sage-runtests",
    "bin/sage-fixdoctests",
    "bin/sage-coverage",
    # The following is deprecated but might still be used in user package install scripts
    "bin/sage-cython",
    # Helper scripts invoked by sage script
    # (they would actually belong to something like libexec)
    "bin/sage-cachegrind",
    "bin/sage-callgrind",
    "bin/sage-massif",
    "bin/sage-omega",
    "bin/sage-valgrind",
    "bin/sage-venv-config",
    "bin/sage-version.sh",
    "bin/sage-cleaner",
    # Only makes sense in sage-the-distribution. TODO: Move to another installation script.
    "bin/sage-list-packages",
    # Uncategorized scripts in alphabetical order
    "bin/math-readline",
    "bin/sage-env",
    # sage-env-config -- installed by sage_conf
    # sage-env-config.in -- not to be installed
    "bin/sage-grep",
    "bin/sage-grepdoc",
    "bin/sage-inline-fortran",
    "bin/sage-ipynb2rst",
    "bin/sage-ipython",
    "bin/sage-notebook",
    "bin/sage-num-threads.py",
    "bin/sage-preparse",
    "bin/sage-python",
    "bin/sage-run",
    "bin/sage-run-cython",
    "bin/sage-startuptime.py",
    "bin/sage-update-version",
]
license-files = ["LICENSE.txt"]
include-package-data = false

[tool.setuptools.package-data]
"sage.libs.gap" = ["sage.gaprc"]
"sage.interfaces" = ["sage-maxima.lisp"]
"sage.doctest" = ["tests/*"]
"sage.repl.rich_output" = ["example*"]
sage = [
    "ext_data/*",
    "ext_data/kenzo/*",
    "ext_data/singular/*",
    "ext_data/singular/function_field/*",
    "ext_data/images/*",
    "ext_data/doctest/*",
    "ext_data/doctest/invalid/*",
    "ext_data/gap/*",
    "ext_data/gap/joyner/*",
    "ext_data/mwrank/*",
    "ext_data/notebook-ipython/*",
    "ext_data/nbconvert/*",
    "ext_data/graphs/*",
    "ext_data/pari/*",
    "ext_data/pari/dokchitser/*",
    "ext_data/pari/buzzard/*",
    "ext_data/pari/simon/*",
    "ext_data/magma/*",
    "ext_data/magma/latex/*",
    "ext_data/magma/sage/*",
    "ext_data/valgrind/*",
    "ext_data/threejs/*",
]

[tool.setuptools.dynamic]
version = {file = ["VERSION.txt"]}

[external]
# External dependencies in the format proposed by https://peps.python.org/pep-0725
# In the future, sage-the-distribution can read this information
build-requires = [
  "virtual:compiler/c",
  "virtual:compiler/cpp",
  "pkg:generic/pkg-config"
]

host-requires = [
  "virtual:interface/blas",
  "pkg:generic/boost",
  "pkg:generic/brial",
  "pkg:generic/cddlib",
  "pkg:generic/cliquer",
  "pkg:generic/ecl",
  "pkg:generic/eclib",
  "pkg:generic/ecm",
  "pkg:generic/fflas-ffpack",
  "pkg:generic/fplll",
  "pkg:generic/flint",
  "pkg:generic/libgd",
  "pkg:generic/gap",
  "pkg:generic/gfan",
  "pkg:generic/giac",
  "pkg:generic/givaro",
  "pkg:generic/glpk",
  "pkg:generic/gmp",
  "pkg:generic/gsl",
  "pkg:generic/iml",
  "pkg:generic/lcalc",
  "pkg:generic/libbraiding",
  "pkg:generic/libhomfly",
  "pkg:generic/linbox",
  "pkg:generic/lrcalc",
  "pkg:generic/m4ri",
  "pkg:generic/m4rie",
  "pkg:generic/maxima",
  "pkg:generic/mpc",
  "pkg:generic/mpfi",
  "pkg:generic/mpfr",
  "pkg:generic/nauty",
  "pkg:generic/ntl",
  "pkg:generic/palp",
  "pkg:generic/pari",
  "pkg:generic/pari-elldata",
  "pkg:generic/pari-galdata",
  "pkg:generic/pari-seadata",
  "pkg:generic/planarity",
  "pkg:generic/ppl",
  "pkg:generic/primesieve",
  "pkg:generic/primecount",
  "pkg:generic/qhull",
  "pkg:generic/rw",
  "pkg:generic/singular",
  "pkg:generic/symmetrica",
  "pkg:generic/sympow",
]

dependencies = [
  "pkg:generic/tachyon",
  "pkg:generic/sagemath-polytopes-db",
  "pkg:generic/sagemath-elliptic-curves",
]
